--- a/style.css
+++ b/style.css
@@ -343,6 +343,10 @@ nav .fa-solid{
         background-image: url(Images/phonebg.png);
         
     }
+    .header-text{
+    margin-top: 10%;
+    font-size: 20px;
+}
     nav .fa-solid{
         display: block;
         font-size: 25px;
